corpus/include_cocci.txt
============
Include file
============

#include "a string"

@@
@@

---

(source_file
    (include (string))
    (changeset (metavariables) (transformation))
)

==========
Using file
==========

using "other string"

@@
@@

---

(source_file
    (using_file (string))
    (changeset (metavariables) (transformation))
)

==============
Using ISO file
==============

using <path/to/iso/file>

@@
@@

---

(source_file
    (using_iso (pathToIsoFile))
    (changeset (metavariables) (transformation))
)

=======
Virtual
=======

virtual id, another_id, ID

@@
@@

---

(source_file
    (virtual (id) (id) (id))
    (changeset (metavariables) (transformation))
)
